Fixed chat overflow and min input length

--- a/client/src/components/chat/Chat.css
+++ b/client/src/components/chat/Chat.css
@@ -2,21 +2,25 @@
   text-align: right;
   background: white;
   width: fit-content;
+  max-width: 70%;
   margin: 1rem 1.5rem 1rem auto;
   color: black;
   padding: 1rem;
   border-radius: 1rem 0rem 1rem 1rem;
   box-shadow: 0px 1px 5px #a7a7a7;
+  overflow-wrap: break-word;
 }
 .chat-res {
   text-align: left;
   background-image: linear-gradient(to right, #6e0fc8, #cd49e6);
   width: fit-content;
+  max-width: 70%;
   margin: 1rem auto 1rem 1.5rem;
   color: white;
   padding: 1rem;
   border-radius: 0rem 1rem 1rem 1rem;
   box-shadow: 0px 1px 5px #a7a7a7;
+  overflow-wrap: break-word;
 }
 .paper {
   height: 500px;
